--- a/scss/main.scss
+++ b/scss/main.scss
@@ -422,6 +422,7 @@ span {
   }
   .tree__btn,
   .tree__btn a {
+    text-decoration: none;
     padding: 0 auto;
     margin-left: 0;
     margin-bottom: 10px;
