--- a/styles/main.css
+++ b/styles/main.css
@@ -445,6 +445,7 @@ span {
 }
 .tree__body .tree__btn,
 .tree__body .tree__btn a {
+  text-decoration: none;
   padding: 0 auto;
   margin-left: 0;
   margin-bottom: 10px;
