--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,11 +12,15 @@ body {
   color: #555;
   overflow-x: hidden;
 }
-.container-large {
+.container-medium {
   max-width: 1170 / $width * 100vw;
   margin: 0 auto;
   padding-left: 10 / $width * 100vw;
   padding-right: 10 / $width * 100vw;
+}
+.container-large {
+  max-width: 1250 / $width * 100vw;
+  margin: 0 auto;
 }
 button,
 button a {
@@ -24,13 +28,12 @@ button a {
 }
 .btn {
   display: inline-block;
-  font-style: 600;
+  font-weight: 600;
   font-family: Raleway;
   background-color: yellow;
   text-decoration: none;
   font-size: 20 / $width * 100vw;
   font-weight: 600;
-  margin-left: 350 / $width * 100vw;
   padding: 16 / $width * 100vw 32 / $width * 100vw;
   border-radius: 150 / $width * 100vw;
   border: none;
@@ -39,7 +42,7 @@ button a {
   color: #fff;
   &:link {
     display: inline-block;
-    font-style: 600;
+    font-weight: 600;
     font-family: Raleway;
     background-color: yellow;
     text-decoration: none;
@@ -52,9 +55,9 @@ button a {
     transition: all 0.3s;
     color: #fff;
   }
-  &:visited {
+  &:visited:not(.subscribe__btn) {
     display: inline-block;
-    font-style: 600;
+    font-weight: 600;
     font-family: Raleway;
     background-color: yellow;
     text-decoration: none;
@@ -67,16 +70,17 @@ button a {
     transition: all 0.3s;
     color: #fff;
   }
-  &:hover {
+  &:hover:not(.subscribe__btn) {
     background-color: rgba(9, 44, 9, 0.651);
   }
-  &:active {
+  &:active:not(.subscribe__btn) {
     background-color: rgba(9, 44, 9, 0.651);
   }
 }
 .header {
   &__wrapper-top {
     padding: 20 / $width * 100vw 0 0;
+    position: relative;
     &__row {
       padding-bottom: 20 / $width * 100vw;
       display: flex;
@@ -128,56 +132,112 @@ button a {
   top: 120 / $width * 100vw;
   padding: 5 / $width * 100vw;
   border: 2 / $width * 100vw solid #4caf50;
-  font-style: 600;
+  font-weight: 600;
   //left: 300 / $width * 100vw;
   right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   z-index: 1000;
-  padding: 10 / $width * 100vw 13%;
+  padding: 10 / $width * 100vw 0;
+  &.fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    opacity: 0.9;
+  }
+  .d-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   .header__wrapper-bottom {
     text-transform: uppercase;
+    .header__main-list {
+      width: 934 / $width * 100vw;
+      height: 20 / $width * 100vw;
+      &__submenu {
+        position: absolute;
+        left: 0;
+        width: 200 / $width * 100vw;
+        margin-top: 0;
+        background-color: rgba(56, 102, 65, 0.795);
+        display: none;
+        padding: 4 / $width * 100vw 20 / $width * 100vw;
+        transform: translate(-20 / $width * 100vw, 40 / $width * 100vw);
+        border-radius: 5 / $width * 100vw;
+
+        &__child {
+          width: 100%;
+          height: 35 / $width * 100vw;
+          a {
+            line-height: 30 / $width * 100vw;
+            &::after {
+              display: none;
+            }
+          }
+        }
+      }
+      &__item {
+        margin-right: 36 / $width * 100vw;
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: -5 / $width * 100vw;
+          width: 0%;
+          height: 2 / $width * 100vw;
+          background: #ffd401;
+          transition: width 0.4s;
+        }
+        &:hover {
+          &::before {
+            width: 100%;
+          }
+        }
+        &:nth-child(1) {
+          margin-right: 39 / $width * 100vw;
+        }
+        &:nth-child(2) {
+          margin-right: 45 / $width * 100vw;
+          position: relative;
+          a::after {
+            content: "";
+            position: absolute;
+            right: -2 / $width * 100vw;
+            height: 20 / $width * 100vw;
+            width: 20 / $width * 100vw;
+            background-image: url("../images/icons/sub-menu_arrow.svg");
+            background-size: 8 / $width * 100vw 6 / $width * 100vw;
+            background-position: center;
+            background-repeat: no-repeat;
+            transform: translateX(100%);
+          }
+        }
+        &:nth-child(8) {
+          margin-right: 0;
+        }
+      }
+    }
     ul {
       list-style: none;
 
       li {
+        height: 20 / $width * 100vw;
         position: relative;
         float: left;
-        left: 10%;
         align-self: center;
-        margin-right: 5px;
+        margin-right: 5 / $width * 100vw;
 
         a img {
-          height: 30 / $width * 100vw;
-          width: 30 / $width * 100vw;
+          width: 18 / $width * 100vw;
+          height: 20 / $width * 100vw;
           color: #fff;
           filter: brightness(0) invert(10);
         }
         a {
           font-size: 16 / $width * 100vw;
-          padding: 5 / $width * 100vw;
+          line-height: 20 / $width * 100vw;
           color: white;
           display: block;
           text-decoration: none;
-          &:hover {
-            transition: all 5s;
-            text-decoration: underline yellow;
-          }
-        }
-        ul {
-          position: absolute;
-          left: 0;
-          width: 200 / $width * 100vw;
-          margin-top: 0;
-          background-color: rgba(56, 102, 65, 0.795);
-          display: none;
-          padding: 20px;
-          li {
-            width: 100%;
-            border-top: 1 / $width * 100vw solid rgba(56, 102, 65, 0.795);
-          }
         }
         &:hover {
           > ul {
@@ -188,7 +248,6 @@ button a {
     }
   }
 }
-
 /****SECTION HERO******/
 .section-hero {
   max-width: 1920 / $width * 100vw;
@@ -260,7 +319,6 @@ button a {
   .hero-description {
     font-size: 16 / $width * 100vw;
     padding-top: 26 / $width * 100vw;
-    margin-left: 10 / $width * 100vw;
     margin-right: 350 / $width * 100vw;
   }
 }
@@ -318,9 +376,6 @@ button a {
 }
 
 .section-video {
-  .btn {
-    margin-left: 350 / $width * 100vw;
-  }
   max-width: 1920 / $width * 100vw;
   background-image: url("../images/Rectangle 101.png");
   margin-top: 0 auto;
@@ -336,14 +391,12 @@ button a {
 .video-primary {
   font-size: 52 / $width * 100vw;
   line-height: 1.05;
-  margin-left: 350 / $width * 100vw;
   margin-right: 100 / $width * 100vw;
   margin-top: 32 / $width * 100vw;
   margin-bottom: 32 / $width * 100vw;
   white-space: nowrap;
 }
 .video-description {
-  margin-left: 350 / $width * 100vw;
   font-size: 20 / $width * 100vw;
   line-height: 1.6;
   margin-bottom: 28 / $width * 100vw;
@@ -379,10 +432,6 @@ span {
     padding-top: 50 / $width * 100vw;
   }
 }
-.container-large {
-  padding-left: 10 / $width * 100vw;
-  padding-right: 10 / $width * 100vw;
-}
 
 .favorites__body {
   padding: 60 / $width * 100vw 0;
@@ -400,6 +449,7 @@ span {
   /*margin: 0 auto;*/
   margin-right: 10 / $width * 100vw;
   background-size: 100 / $width * 100vw 200 / $width * 100vw;
+  width: 175px;
 }
 
 .tree__body {
@@ -491,8 +541,9 @@ span {
 
 .sliders__prev,
 .sliders__next {
-  transform: translate(-50%);
-  left: -32 / $width * 100vw;
+  position: absolute;
+  transform: rotate(0deg) translate(50%, -50%);
+  left: -8 / $width * 100vw;
   background-color: transparent;
   width: 27 / $width * 100vw;
   height: 27 / $width * 100vw;
@@ -501,10 +552,8 @@ span {
   cursor: pointer;
 }
 .sliders__next {
-  right: 32 / $width * 100vw;
-  margin-right: 0;
-  margin-left: 24 / $width * 100vw;
-  transform: rotate(180deg) translate(-50%);
+  right: 8 / $width * 100vw;
+  transform: rotate(180deg) translate(-50%, -50%);
 }
 
 /*Testimonaals*/
@@ -527,7 +576,6 @@ span {
 }
 .testimonials__prev,
 .testimonials__next {
-  position: absolute;
   background-color: transparent;
   width: 27 / $width * 100vw;
   height: 27 / $width * 100vw;
@@ -599,16 +647,12 @@ span {
   &__body {
     padding: 50 / $width * 100vw 0 60 / $width * 100vw 0;
     text-align: center;
-    /* margin-right: 300 / $width * 100vw;
-    margin-left: 300 / $width * 100vw;*/
 
     h3 {
       max-width: 851 / $width * 100vw;
       font-size: 44 / $width * 100vw;
-      /*line-height: 52 / $width * 100vw;*/
       font-weight: 500;
       margin-bottom: 50 / $width * 100vw;
-      margin-left: 534 / $width * 100vw;
     }
     span {
       font-weight: 700;
@@ -620,7 +664,6 @@ span {
     position: relative;
     /* height: 54 / $width * 100vw;*/
     max-width: 700 / $width * 100vw;
-    margin-left: 610 / $width * 100vw;
 
     input {
       width: 100%;
@@ -633,8 +676,9 @@ span {
       outline: none;
     }
     button {
-      background-color: yellow;
-      font-style: 600;
+      //  background-color: yellow;
+      background-color: inherit;
+      font-weight: 600;
       border: none;
       cursor: pointer;
       transition: all 0.3s;
@@ -670,7 +714,7 @@ span {
     justify-content: space-around;
   }
   &__text {
-    padding-left: 30px;
+    padding-left: 30 / $width * 100vw;
   }
 
   &__text,
@@ -684,7 +728,7 @@ span {
     }
   }
   &__terms {
-    padding-right: 30px;
+    padding-right: 30 / $width * 100vw;
   }
 
   &__terms,
