--- a/styles/main.css
+++ b/styles/main.css
@@ -11,11 +11,16 @@ body {
   overflow-x: hidden;
 }
 
-.container-large {
+.container-medium {
   max-width: 60.9375vw;
   margin: 0 auto;
   padding-left: 0.5208333333vw;
   padding-right: 0.5208333333vw;
+}
+
+.container-large {
+  max-width: 65.1041666667vw;
+  margin: 0 auto;
 }
 
 button,
@@ -25,13 +30,12 @@ button a {
 
 .btn {
   display: inline-block;
-  font-style: 600;
+  font-weight: 600;
   font-family: Raleway;
   background-color: yellow;
   text-decoration: none;
   font-size: 1.0416666667vw;
   font-weight: 600;
-  margin-left: 18.2291666667vw;
   padding: 0.8333333333vw 1.6666666667vw;
   border-radius: 7.8125vw;
   border: none;
@@ -41,7 +45,7 @@ button a {
 }
 .btn:link {
   display: inline-block;
-  font-style: 600;
+  font-weight: 600;
   font-family: Raleway;
   background-color: yellow;
   text-decoration: none;
@@ -54,9 +58,9 @@ button a {
   transition: all 0.3s;
   color: #fff;
 }
-.btn:visited {
+.btn:visited:not(.subscribe__btn) {
   display: inline-block;
-  font-style: 600;
+  font-weight: 600;
   font-family: Raleway;
   background-color: yellow;
   text-decoration: none;
@@ -69,15 +73,16 @@ button a {
   transition: all 0.3s;
   color: #fff;
 }
-.btn:hover {
+.btn:hover:not(.subscribe__btn) {
   background-color: rgba(9, 44, 9, 0.651);
 }
-.btn:active {
+.btn:active:not(.subscribe__btn) {
   background-color: rgba(9, 44, 9, 0.651);
 }
 
 .header__wrapper-top {
   padding: 1.0416666667vw 0 0;
+  position: relative;
 }
 .header__wrapper-top__row {
   padding-bottom: 1.0416666667vw;
@@ -130,56 +135,109 @@ button a {
   top: 6.25vw;
   padding: 0.2604166667vw;
   border: 0.1041666667vw solid #4caf50;
-  font-style: 600;
+  font-weight: 600;
   right: 0;
+  z-index: 1000;
+  padding: 0.5208333333vw 0;
+}
+.dropdown.fixed {
+  position: fixed;
+  left: 0;
+  top: 0;
+  opacity: 0.9;
+}
+.dropdown .d-flex {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 1000;
-  padding: 0.5208333333vw 13%;
 }
 .dropdown .header__wrapper-bottom {
   text-transform: uppercase;
 }
-.dropdown .header__wrapper-bottom ul {
-  list-style: none;
+.dropdown .header__wrapper-bottom .header__main-list {
+  width: 48.6458333333vw;
+  height: 1.0416666667vw;
 }
-.dropdown .header__wrapper-bottom ul li {
-  position: relative;
-  float: left;
-  left: 10%;
-  align-self: center;
-  margin-right: 5px;
-}
-.dropdown .header__wrapper-bottom ul li a img {
-  height: 1.5625vw;
-  width: 1.5625vw;
-  color: #fff;
-  filter: brightness(0) invert(10);
-}
-.dropdown .header__wrapper-bottom ul li a {
-  font-size: 0.8333333333vw;
-  padding: 0.2604166667vw;
-  color: white;
-  display: block;
-  text-decoration: none;
-}
-.dropdown .header__wrapper-bottom ul li a:hover {
-  transition: all 5s;
-  text-decoration: underline yellow;
-}
-.dropdown .header__wrapper-bottom ul li ul {
+.dropdown .header__wrapper-bottom .header__main-list__submenu {
   position: absolute;
   left: 0;
   width: 10.4166666667vw;
   margin-top: 0;
   background-color: rgba(56, 102, 65, 0.795);
   display: none;
-  padding: 20px;
+  padding: 0.2083333333vw 1.0416666667vw;
+  transform: translate(-1.0416666667vw, 2.0833333333vw);
+  border-radius: 0.2604166667vw;
 }
-.dropdown .header__wrapper-bottom ul li ul li {
+.dropdown .header__wrapper-bottom .header__main-list__submenu__child {
   width: 100%;
-  border-top: 0.0520833333vw solid rgba(56, 102, 65, 0.795);
+  height: 1.8229166667vw;
+}
+.dropdown .header__wrapper-bottom .header__main-list__submenu__child a {
+  line-height: 1.5625vw;
+}
+.dropdown .header__wrapper-bottom .header__main-list__submenu__child a::after {
+  display: none;
+}
+.dropdown .header__wrapper-bottom .header__main-list__item {
+  margin-right: 1.875vw;
+}
+.dropdown .header__wrapper-bottom .header__main-list__item::before {
+  content: "";
+  position: absolute;
+  bottom: -0.2604166667vw;
+  width: 0%;
+  height: 0.1041666667vw;
+  background: #ffd401;
+  transition: width 0.4s;
+}
+.dropdown .header__wrapper-bottom .header__main-list__item:hover::before {
+  width: 100%;
+}
+.dropdown .header__wrapper-bottom .header__main-list__item:nth-child(1) {
+  margin-right: 2.03125vw;
+}
+.dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) {
+  margin-right: 2.34375vw;
+  position: relative;
+}
+.dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) a::after {
+  content: "";
+  position: absolute;
+  right: -0.1041666667vw;
+  height: 1.0416666667vw;
+  width: 1.0416666667vw;
+  background-image: url("../images/icons/sub-menu_arrow.svg");
+  background-size: 0.4166666667vw 0.3125vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: translateX(100%);
+}
+.dropdown .header__wrapper-bottom .header__main-list__item:nth-child(8) {
+  margin-right: 0;
+}
+.dropdown .header__wrapper-bottom ul {
+  list-style: none;
+}
+.dropdown .header__wrapper-bottom ul li {
+  height: 1.0416666667vw;
+  position: relative;
+  float: left;
+  align-self: center;
+  margin-right: 0.2604166667vw;
+}
+.dropdown .header__wrapper-bottom ul li a img {
+  width: 0.9375vw;
+  height: 1.0416666667vw;
+  color: #fff;
+  filter: brightness(0) invert(10);
+}
+.dropdown .header__wrapper-bottom ul li a {
+  font-size: 0.8333333333vw;
+  line-height: 1.0416666667vw;
+  color: white;
+  display: block;
+  text-decoration: none;
 }
 .dropdown .header__wrapper-bottom ul li:hover > ul {
   display: initial;
@@ -264,7 +322,6 @@ button a {
 .section-services .hero-description {
   font-size: 0.8333333333vw;
   padding-top: 1.3541666667vw;
-  margin-left: 0.5208333333vw;
   margin-right: 18.2291666667vw;
 }
 
@@ -333,9 +390,6 @@ button a {
   margin-top: 0 auto;
   position: relative;
 }
-.section-video .btn {
-  margin-left: 18.2291666667vw;
-}
 
 .video {
   display: grid;
@@ -348,7 +402,6 @@ button a {
 .video-primary {
   font-size: 2.7083333333vw;
   line-height: 1.05;
-  margin-left: 18.2291666667vw;
   margin-right: 5.2083333333vw;
   margin-top: 1.6666666667vw;
   margin-bottom: 1.6666666667vw;
@@ -356,7 +409,6 @@ button a {
 }
 
 .video-description {
-  margin-left: 18.2291666667vw;
   font-size: 1.0416666667vw;
   line-height: 1.6;
   margin-bottom: 1.4583333333vw;
@@ -397,11 +449,6 @@ span {
   padding-top: 2.6041666667vw;
 }
 
-.container-large {
-  padding-left: 0.5208333333vw;
-  padding-right: 0.5208333333vw;
-}
-
 .favorites__body {
   padding: 3.125vw 0;
   text-align: center;
@@ -420,6 +467,7 @@ span {
   /*margin: 0 auto;*/
   margin-right: 0.5208333333vw;
   background-size: 5.2083333333vw 10.4166666667vw;
+  width: 175px;
 }
 
 .tree__body {
@@ -510,8 +558,9 @@ span {
 
 .sliders__prev,
 .sliders__next {
-  transform: translate(-50%);
-  left: -1.6666666667vw;
+  position: absolute;
+  transform: rotate(0deg) translate(50%, -50%);
+  left: -0.4166666667vw;
   background-color: transparent;
   width: 1.40625vw;
   height: 1.40625vw;
@@ -521,10 +570,8 @@ span {
 }
 
 .sliders__next {
-  right: 1.6666666667vw;
-  margin-right: 0;
-  margin-left: 1.25vw;
-  transform: rotate(180deg) translate(-50%);
+  right: 0.4166666667vw;
+  transform: rotate(180deg) translate(-50%, -50%);
 }
 
 /*Testimonaals*/
@@ -544,7 +591,6 @@ span {
 
 .testimonials__prev,
 .testimonials__next {
-  position: absolute;
   background-color: transparent;
   width: 1.40625vw;
   height: 1.40625vw;
@@ -611,16 +657,12 @@ span {
 .subscribe__body {
   padding: 2.6041666667vw 0 3.125vw 0;
   text-align: center;
-  /* margin-right: 300 / $width * 100vw;
-  margin-left: 300 / $width * 100vw;*/
 }
 .subscribe__body h3 {
   max-width: 44.3229166667vw;
   font-size: 2.2916666667vw;
-  /*line-height: 52 / $width * 100vw;*/
   font-weight: 500;
   margin-bottom: 2.6041666667vw;
-  margin-left: 27.8125vw;
 }
 .subscribe__body span {
   font-weight: 700;
@@ -630,7 +672,6 @@ span {
   position: relative;
   /* height: 54 / $width * 100vw;*/
   max-width: 36.4583333333vw;
-  margin-left: 31.7708333333vw;
 }
 .subscribe__row input {
   width: 100%;
@@ -643,8 +684,8 @@ span {
   outline: none;
 }
 .subscribe__row button {
-  background-color: yellow;
-  font-style: 600;
+  background-color: inherit;
+  font-weight: 600;
   border: none;
   cursor: pointer;
   transition: all 0.3s;
@@ -675,7 +716,7 @@ span {
   justify-content: space-around;
 }
 .footer__text {
-  padding-left: 30px;
+  padding-left: 1.5625vw;
 }
 .footer__text, .footer__text a {
   font-size: 0.7291666667vw;
@@ -686,7 +727,7 @@ span {
   color: #fff;
 }
 .footer__terms {
-  padding-right: 30px;
+  padding-right: 1.5625vw;
 }
 .footer__terms, .footer__terms a {
   font-size: 0.625vw;
