--- a/styles/main.css
+++ b/styles/main.css
@@ -82,7 +82,7 @@ button a {
 
 .header__wrapper-top {
   padding: 1.0416666667vw 0 0;
-  position: relative;
+  /* position: relative;*/
 }
 .header__wrapper-top__row {
   padding-bottom: 1.0416666667vw;
@@ -131,7 +131,6 @@ button a {
   font-family: Raleway;
   background-color: #386641;
   max-width: 100vw;
-  position: static;
   top: 6.25vw;
   padding: 0.2604166667vw;
   border: 0.1041666667vw solid #4caf50;
@@ -263,7 +262,8 @@ button a {
   margin-left: 18.2291666667vw;
   font-size: 1.0416666667vw;
   line-height: 1.6;
-  margin-bottom: 2.5vw;
+  margin-bottom: 0.5208333333vw;
+  margin-top: 1.5625vwx;
 }
 
 .hero-img {
@@ -271,27 +271,29 @@ button a {
 }
 
 .heading-primary {
-  font-weight: 700;
+  font-weight: 800;
   color: #333;
   letter-spacing: -0.0260416667vw;
-  font-size: 2.7083333333vw;
+  font-size: 2.6041666667vw;
   line-height: 1.05;
   margin-left: 18.2291666667vw;
-  margin-top: 1.6666666667vw;
-  margin-bottom: 1.6666666667vw;
+  margin-top: 4.1666666667vw;
+  margin-bottom: 1.0416666667vw;
 }
 
 .tag-title {
+  text-transform: uppercase;
+  font-weight: 700;
   font-size: 1.1458333333vw;
   line-height: 1.05;
   margin-left: 18.2291666667vw;
-  margin-top: 1.6666666667vwx;
-  margin-bottom: 1.6666666667vwx;
+  margin-top: 1.0416666667vwx;
   color: #386641;
 }
 
 .hero-text-box .btn {
-  margin-left: 485px;
+  float: right;
+  margin-right: 12.5vw;
 }
 
 /*********QUALITY*/
@@ -323,10 +325,23 @@ button a {
   grid-template-rows: 0.5fr 2fr;
   align-items: center;
 }
-.section-services .hero-description {
+
+.heading-first {
+  font-weight: 800;
+  color: #333;
+  letter-spacing: -0.0260416667vw;
+  font-size: 2.8125vw;
+  line-height: 1.05;
+}
+
+.hero-second {
+  height: 5vw;
+  width: 30.2083333333vw;
   font-size: 0.8333333333vw;
-  padding-top: 1.3541666667vw;
-  margin-right: 18.2291666667vw;
+  padding-top: 4.6354166667vw;
+  margin-bottom: 3.125vw;
+  line-height: 1.6;
+  font-weight: 500;
 }
 
 .color {
@@ -334,9 +349,9 @@ button a {
 }
 
 .services-container {
-  padding: 1.3541666667vw;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .gallery {
@@ -390,55 +405,70 @@ button a {
 
 .section-video {
   max-width: 100vw;
+  height: 27.0833333333vw;
   background-image: url("../images/Rectangle 101.png");
   margin-top: 0 auto;
   position: relative;
 }
 
 .video {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 5vw;
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .video-primary {
-  font-size: 2.7083333333vw;
+  width: 27.8645833333vw;
+  height: 2.7083333333vw;
+  font-size: 2.2916666667vw;
   line-height: 1.05;
-  margin-right: 5.2083333333vw;
-  margin-top: 1.6666666667vw;
-  margin-bottom: 1.6666666667vw;
-  white-space: nowrap;
+  margin-top: 4.6875vw;
+}
+
+.paragraph {
+  height: 8.8020833333vw;
+  width: 27.8645833333vw;
+  margin-bottom: 1.5625vw;
 }
 
 .video-description {
-  font-size: 1.0416666667vw;
+  font-size: 0.9375vw;
   line-height: 1.6;
-  margin-bottom: 1.4583333333vw;
+  margin-bottom: 1.0416666667vw;
+  font-weight: 500;
 }
 
 .video-img {
-  width: 70%;
+  height: 15.3645833333vw;
+  width: 27.34375vw;
   border: 1.0416666667vw solid white;
+  margin-top: 4.84375vw;
+  margin-bottom: 4.7916666667vw;
 }
 
 .video-text-box {
   color: white;
-  padding: 0.8333333333vw;
-  display: flexbox;
 }
 
 span {
-  color: white;
+  color: yellow;
   font-weight: 900;
+  font-size: 1.25vw;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 .vector-img {
   position: absolute;
-  bottom: 10.4166666667vw;
-  right: 23.4375vw;
-  width: 1.5%;
+  margin-top: 12.34375vw;
+  bottom: 12.2395833333vw;
+  right: 32.8125vw;
+  height: 2.5vw;
+  width: 1.9791666667vw;
+}
+
+.video-btn {
+  margin-bottom: 4.6875vw;
 }
 
 .favorites {
@@ -471,7 +501,7 @@ span {
   /*margin: 0 auto;*/
   margin-right: 0.5208333333vw;
   background-size: 5.2083333333vw 10.4166666667vw;
-  width: 175px;
+  width: 9.1145833333vw;
 }
 
 .tree__body {
