--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,7 +88,6 @@ button a {
       justify-content: space-between;
       flex-wrap: nowrap;
       justify-content: space-between;
-      align-items: center;
       max-width: 1250 / $width * 100vw;
       margin: 0 auto;
       color: #000;
@@ -744,30 +743,33 @@ span {
 
 .footer {
   background: #fff;
+  margin-top: 80px;
 
   &__widgets {
-    padding: 50 / $width * 100vw 300 / $width * 100vw 54 / $width * 100vw 300 /
-      $width * 100vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   &__copyright {
-    padding: 15 / $width * 100vw 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background: #454751;
     font-weight: 400;
   }
   &__row {
     text-align: center;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
   }
-  &__text {
-    padding-left: 30 / $width * 100vw;
-  }
+  //&__text {
+  // padding-left: 30 / $width * 100vw;
+  // }
 
   &__text,
   &__text a {
+    height: 26px;
+    width: 212px;
     font-size: 14 / $width * 100vw;
     line-height: 26 / $width * 100vw;
     color: #c0c0c0;
@@ -776,9 +778,9 @@ span {
       color: #fff;
     }
   }
-  &__terms {
-    padding-right: 30 / $width * 100vw;
-  }
+  //&__terms {
+  //padding-right: 30 / $width * 100vw;
+  //}
 
   &__terms,
   &__terms a {
